Sat Mar 19 18:35:05 2011  Tajima Akio <artonx@yahoo.co.jp>

	* hash.c (ruby_setenv): calculate total env block size for win32.
	* test/ruby/test_env.rb: add test for above patch.

Sat Mar 19 17:14:46 2011  Tajima Akio <artonx@yahoo.co.jp>

	* hash.c (ruby_setenv): checking with max process environment 
	  block size fow Win32. 32767 for 2000/XP, 2003. if failed to
	  read the block, then checking with 5120 for earlier Windows.

Sat Mar 19 12:30:25 2011  Tanaka Akira  <akr@fsij.org>

	* ext/openssl/ossl_x509revoked.c: parenthesize macro arguments.

Fri Mar 18 20:44:36 2011  Tanaka Akira  <akr@fsij.org>

	* ext/openssl/ossl_x509req.c: parenthesize macro arguments.

Fri Mar 18 08:48:06 2011  Oleg Shaldybin  <oleg.shaldybin@gmail.com>

	* lib/fileutils.rb (FileUtils::Entry_#copy_file): updated FileUtils.cp
	  to still copy file permissions when :preserve is false (as cp does
	  this even when -p isn't set).

Fri Mar 18 00:59:38 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/win32ole/extconf.rb (create_docfile): removed.  should not
	  modify source directory unnecessarily, platform dependent
	  documentation should be dealt with by rdoc.  [ruby-core:35495]

Fri Mar 18 00:54:20 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/ruby.h (rb_funcall_passing_block): add prototype.
	  a patch by James M. Lawrence at [ruby-core:35501]

Wed Mar 17 06:23:31 2011  Tanaka Akira  <akr@fsij.org>

	* ext/openssl/ossl_x509name.c: parenthesize macro arguments.

Wed Mar 16 20:36:56 2011  Tanaka Akira  <akr@fsij.org>

	* ext/socket/ipsocket.c (init_inetsock_internal): raise an error on
	  listen(2) failure.
	  reported by Xavier Shay.  [ruby-core:35505]

Wed Mar 16 15:06:21 2011  Eric Hodel  <drbrain@segment7.net>

	* ext/openssl/lib/openssl/buffering.rb (module OpenSSL): #flush should
	  not change sync mode on exception.
	* test/openssl/test_buffering.rb: added

Wed Mar 16 13:45:28 2011  Eric Hodel  <drbrain@segment7.net>
