@@ -1,3 +1,9 @@
+Sun Mar 20 01:39:48 2011  Tajima Akio <artonx@yahoo.co.jp>
+
+	* hash.c (ruby_setenv): check env process block size with OS ver.
+	* win32/win32.c: export rb_w32_osver for above patch.
+	* include/ruby/win32.h: declare rb_w32_osver for Win32 Libs.
+
 Sat Mar 19 18:35:05 2011  Tajima Akio <artonx@yahoo.co.jp>
 
 	* hash.c (ruby_setenv): calculate total env block size for win32.
@@ -6,7 +12,7 @@ Sat Mar 19 18:35:05 2011  Tajima Akio <artonx@yahoo.co.jp>
 Sat Mar 19 17:14:46 2011  Tajima Akio <artonx@yahoo.co.jp>
 
 	* hash.c (ruby_setenv): checking with max process environment 
-	  block size fow Win32. 32767 for 2000/XP, 2003. if failed to
+	  block size for Win32. 32767 for 2000/XP, 2003. if failed to
 	  read the block, then checking with 5120 for earlier Windows.
 
 Sat Mar 19 12:30:25 2011  Tanaka Akira  <akr@fsij.org>
